# SummaDoc

./: README.md  pyproject.toml
src/app/backend/: main.py
src/app/frontend/: ui.py
src/core/: utils.py
src/core/document_ingestion/: ingestor.py
src/core/summarizer/: summarizer.py
src/core/text_splitter/: splitter.py
