[project]
name = "summadoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "docx2txt>=0.9",
    "fastapi>=0.121.0",
    "langchain>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pymupdf>=1.26.6",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "unstructured>=0.18.18",
    "uvicorn>=0.38.0",
]
